# quick-env

./: .gitignore  AGENTS.md  README.md  pyproject.toml  quick-env.py  tools.toml
.github/workflows/: release.yml
quick_env/: __init__.py  cli.py  config.py  downloader.py  github.py  installer.py  logger.py  platform.py  tools.py
quick_env/installers/: __init__.py  custom_script.py  custom_url.py  dotfile.py  github.py  package_manager.py
tests/: test_downloader.py  test_github.py  test_installer.py  test_platform.py  test_tools.py
