[project]
name = "quick-env"
version = "0.1.0"
description = "Cross-platform development environment setup tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
quick-env = "quick_env.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quick_env"]

[tool.hatch.build.targets.sdist]
include = ["quick_env", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
